[gd_scene load_steps=2 format=3 uid="uid://c1afesiel1vwb"]

[ext_resource type="Script" path="res://interfaceScenes/levelEditorField.gd" id="1_kybhk"]

[node name="LevelEditorField" type="Node2D"]
script = ExtResource("1_kybhk")

[node name="Label" type="Label" parent="."]
offset_right = 192.0
offset_bottom = 31.0
text = "Missing content!!!"
vertical_alignment = 1
clip_text = true

[node name="SpinBox" type="SpinBox" parent="."]
offset_left = 192.0
offset_right = 275.062
offset_bottom = 31.0
allow_greater = true
allow_lesser = true

[connection signal="focus_entered" from="SpinBox" to="." method="_on_spin_box_focus_entered"]
[connection signal="focus_exited" from="SpinBox" to="." method="_on_spin_box_focus_exited"]
[connection signal="value_changed" from="SpinBox" to="." method="_on_spin_box_value_changed"]
